--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello world</h1>
     <p>This is a Changing by  Idris</p>
     <p>Again changes for chekcing conflit</p>
+    <p>more changes</p>
 </body>
 </html>
